--- a/src/template/blocks.html.twig
+++ b/src/template/blocks.html.twig
@@ -1,7 +1,17 @@
 {% extends "form_div_layout.html.twig" %}
 
-{% form_theme form _self %}
-
 {% block form_row %}
         {{- form_widget(form) -}}
 {% endblock form_row %}
+
+{%- block form_rows -%}
+    {% for child in form|filter(child => not child.rendered) %}
+        {{- form_row(child) -}}
+    {% endfor %}
+{%- endblock form_rows -%}
+
+{%- block form -%}
+    {{ form_start(form) }}
+        {{- form_widget(form) -}}
+    {{ form_end(form) }}
+{%- endblock form -%}
